--- a/libs/brig-types/brig-types.cabal
+++ b/libs/brig-types/brig-types.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 8325cabb6835adebe7d0c773eb6059ab230d35b8f8b0b22c5d618f3dc91f66fd
+-- hash: 6552470103e25be8ed8fd4931964969c9f7d7be9704d270ab70c56112754a4c2
 
 name:           brig-types
 version:        1.35.0
@@ -91,6 +91,7 @@ library
     , aeson >=2.0.1.0
     , attoparsec >=0.10
     , base ==4.*
+    , bytestring
     , bytestring-conversion >=0.2
     , cassandra-util
     , containers >=0.5
@@ -166,6 +167,7 @@ test-suite brig-types-tests
     , attoparsec >=0.10
     , base ==4.*
     , brig-types
+    , bytestring
     , bytestring-conversion >=0.3.1
     , containers >=0.5
     , imports
