--- a/tools/db/find-undead/find-undead.cabal
+++ b/tools/db/find-undead/find-undead.cabal
@@ -68,6 +68,7 @@ executable find-undead
   build-depends:
       aeson
     , base
+    , bytestring
     , bloodhound
     , brig-types
     , cassandra-util
@@ -79,5 +80,7 @@ executable find-undead
     , optparse-applicative
     , text
     , tinylog
+    , types-common
     , uuid
+    , wire-api
   default-language: Haskell2010
