--- a/tools/db/find-undead/package.yaml
+++ b/tools/db/find-undead/package.yaml
@@ -17,6 +17,7 @@ ghc-options:
 dependencies:
 - aeson
 - base
+- bytestring
 - cassandra-util
 - containers
 - brig-types
@@ -27,8 +28,10 @@ dependencies:
 - text
 - lens
 - tinylog
+- types-common
 - uuid
 - conduit
+- wire-api
 executables:
   find-undead:
     main: Main.hs
