Add MLS public keys to clients (#2147)
* Add `mls_public_keys` field to `NewClient`
* Add table for MLS public keys
* Parse signature schemes in MLS public key map
* Store MLS public keys on client registration
* Lookup MLS public keys
* Add MLS public keys to client updates
* Authenticate sig key when validating key packages
* Test key package upload without keys
* Update golden tests
* Move MLS Cql instances to global Instances module

--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -217,6 +217,7 @@ executables:
     - cassandra-util
     - containers
     - cookie
+    - data-default
     - data-timeout
     - email-validate
     - exceptions
