Partial support adding Sem into AppT
- This force-pushed rebase is as of Mar 11 at ~15:15 UTC
- It does not compile yet

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -66,6 +66,7 @@ library
       Brig.Data.User
       Brig.Data.UserKey
       Brig.Data.UserPendingActivation
+      Brig.Effects.FireAndForget
       Brig.Effects.SFT
       Brig.Email
       Brig.Federation.Client
