lock 2nd factor password challenge team feature per default

--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -44,7 +44,7 @@ config:
       # sndFactorPasswordChallenge:
       #   defaults:
       #     status: disabled
-      #     lockStatus: unlocked
+      #     lockStatus: locked
   aws:
     region: "eu-west-1"
   proxy: {}
