--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -476,6 +476,7 @@ test-suite wire-api-golden-tests
       Test.Wire.API.Golden.Manual.CreateScimToken
       Test.Wire.API.Golden.Manual.FeatureConfigEvent
       Test.Wire.API.Golden.Manual.GetPaginatedConversationIds
+      Test.Wire.API.Golden.Manual.GroupId
       Test.Wire.API.Golden.Manual.ListConversations
       Test.Wire.API.Golden.Manual.QualifiedUserClientPrekeyMap
       Test.Wire.API.Golden.Manual.SearchResultContact
