--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -339,6 +339,7 @@ executable galley-integration
       API.Federation
       API.Federation.Util
       API.MessageTimer
+      API.MLS
       API.Roles
       API.SQS
       API.Teams
@@ -412,6 +413,7 @@ executable galley-integration
     , cassandra-util
     , cassava
     , cereal
+    , comonad
     , containers
     , cookie
     , currency-codes
@@ -422,6 +424,7 @@ executable galley-integration
     , extended
     , extra >=1.3
     , federator
+    , filepath
     , galley
     , galley-types
     , gundeck-types
@@ -438,6 +441,7 @@ executable galley-integration
     , mtl
     , optparse-applicative
     , pem
+    , process
     , proto-lens
     , protobuf
     , quickcheck-instances
@@ -460,6 +464,7 @@ executable galley-integration
     , tasty >=0.8
     , tasty-cannon >=0.3.2
     , tasty-hunit >=0.9
+    , temporary
     , text
     , time
     , tinylog
