--- a/services/galley/package.yaml
+++ b/services/galley/package.yaml
@@ -170,6 +170,7 @@ executables:
     - cassandra-util
     - cassava
     - cereal
+    - comonad
     - containers
     - cookie
     - currency-codes
@@ -179,6 +180,7 @@ executables:
     - errors
     - exceptions
     - federator
+    - filepath
     - galley
     - galley-types
     - gundeck-types
@@ -195,6 +197,7 @@ executables:
     - mtl
     - optparse-applicative
     - pem
+    - process
     - protobuf
     - proto-lens
     - QuickCheck
@@ -214,6 +217,7 @@ executables:
     - tasty >=0.8
     - tasty-cannon >=0.3.2
     - tasty-hunit >=0.9
+    - temporary
     - text
     - time
     - tinylog
