Add mls welcome endpoint to nginz chart

--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -393,6 +393,9 @@ nginx_conf:
       disable_zauth: true
       envs:
       - all
+    - path: /mls/welcome
+      envs:
+      - all
     gundeck:
     - path: /push
       envs:
