--- a/charts/coturn/values.yaml
+++ b/charts/coturn/values.yaml
@@ -1,4 +1,4 @@
-# The amount of Restund instances to run.  NOTE: Only one Restund can run per node due
+# The amount of coturn instances to run.  NOTE: Only one coturn can run per node due
 # to `hostNetwork`. If this number is higher than the amount of nodes that can
 # be used for scheduling (Also see `nodeSelector`) pods will remain in a
 # pending state untill you add more capacity.
@@ -11,7 +11,7 @@ image:
   # overwrite the tag here, otherwise `appVersion` of the chart will be used
   tag: ""
 
-# If you have multiple deployments of Restund running in one cluster, it is
+# If you have multiple deployments of coturn running in one cluster, it is
 # important that they run on disjoint sets of nodes, you can use nodeSelector to enforce this
 nodeSelector: {}
 
@@ -22,11 +22,5 @@ securityContext:
   # Pick a high number that is unlikely to conflict with the host
   # https://kubesec.io/basics/containers-securitycontext-runasuser/
   runAsUser: 31338
-
-#restundUDPListenPort: 3478
-#restundTCPListenPort: 3478
-#restundUDPStatusPort: 33000
-#restundHTTPStatusPort: 8080
-#restundMetricsListenPort: 8443
 
 coturnListenPort: 3478
