--- a/charts/coturn/templates/statefulset.yaml
+++ b/charts/coturn/templates/statefulset.yaml
@@ -95,7 +95,7 @@ spec:
               set -e
               EXTERNAL_IP=$(cat /external-ip/ip)
               ZREST_SECRET="$(cat /secrets/zrest_secret.txt)"
-              sed -Ee "s/__COTURN_HOST__/$EXTERNAL_IP/g" -e "s;__COTURN_SECRET__;$ZREST_SECRET;" /coturn-template/coturn.conf.template > /coturn-config/turnserver.conf
+              sed -Ee "s;__COTURN_EXT_IP__;$EXTERNAL_IP;g" -e "s;__COTURN_POD_IP__;$POD_IP;g" -e "s;__COTURN_SECRET__;$ZREST_SECRET;" /coturn-template/coturn.conf.template > /coturn-config/turnserver.conf
               exec /usr/bin/turnserver -c /coturn-config/turnserver.conf
 
           ports:
