charts/coturn: add readiness and liveness probes.
This unconditionally enabled the Prometheus metrics listener as an endpoint for
liveness checks.

--- a/charts/coturn/templates/configmap-coturn-conf-template.yaml
+++ b/charts/coturn/templates/configmap-coturn-conf-template.yaml
@@ -22,7 +22,7 @@ data:
 
     ## turn, stun.
     listening-ip=__COTURN_EXT_IP__
-    listening-port={{ .Values.coturnListenPort }}
+    listening-port={{ .Values.coturnTurnListenPort }}
     max-allocate-lifetime=3600
     relay-ip=__COTURN_EXT_IP__
     realm=dummy.io
@@ -30,10 +30,9 @@ data:
     secure-stun
     no-rfc5780
 
-    {{- if .Values.coturnEnablePrometheus }}
     ## prometheus metrics
-    prometheus=__COTURN_POD_IP__
-    {{- end }}
+    # FUTUREWORK: check that this is ipv6-safe
+    prometheus=__COTURN_POD_IP__:{{ .Values.coturnMetricsListenPort }}
 
     ## logs
     log-file=stdout
