Update nginx-ingress-services chart

--- a/charts/nginx-ingress-services/templates/issuer.yaml
+++ b/charts/nginx-ingress-services/templates/issuer.yaml
@@ -19,4 +19,7 @@ spec:
       - http01:
           ingress:
             class: nginx
+{{- if .Values.certManager.additionalSolvers }}
+{{ toYaml .Values.certManager.additionalSolvers | indent 6 }}
+{{- end }}
 {{- end -}}
