--- a/charts/restund/templates/statefulset.yaml
+++ b/charts/restund/templates/statefulset.yaml
@@ -39,6 +39,14 @@ spec:
         - name: secrets
           secret:
             secretName: restund
+{{- if .Values.federate.dtls.enabled }}
+        - name: restund-certificate
+          secret:
+            secretName: restund-certificate
+        - name: ca-certs
+          configMap:
+            name: {{ include "restund.federateCAName" . }}
+{{- end }}
       initContainers:
         - name: get-external-ip
           image: bitnami/kubectl:1.19.7
@@ -61,7 +69,11 @@ spec:
               echo -n "$addr" | tee /dev/stderr > /external-ip/ip
       containers:
         - name: {{ .Chart.Name }}
+          {{- if .Values.image.digest }}
+          image: "{{ .Values.image.repository }}@{{ .Values.image.digest }}"
+          {{- else }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: POD_IP
@@ -81,6 +93,12 @@ spec:
             - name: secrets
               mountPath: /secrets/
               readOnly: true
+{{- if .Values.federate.dtls.enabled }}
+            - name: ca-certs
+              mountPath: /ca-certs
+            - name: restund-certificate
+              mountPath: restund-certificate
+{{- end }}
           command:
             - /bin/sh
             - -c
@@ -89,6 +107,10 @@ spec:
               EXTERNAL_IP=$(cat /external-ip/ip)
               export RESTUND_HOST="$EXTERNAL_IP"
               export ZREST_SECRET="$(cat /secrets/zrest_secret.txt)"
+{{- if .Values.federate.dtls.enabled }}
+              cat /restund-certificate/tls.crt /restund-certificate/tls.key > /home/restund/federate-cert+key.pem
+              cp /ca-certs/CA /home/restund/federate-ca-certs.pem
+{{- end }}
               envsubst '$RESTUND_HOST $POD_IP $ZREST_SECRET' < /restund-template/restund.conf.template > /home/restund/restund.conf
               exec /usr/local/sbin/restund -n -f /home/restund/restund.conf
 
