--- a/charts/restund/values.yaml
+++ b/charts/restund/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/wire/restund
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # overwrite the tag here, otherwise `appVersion` of the chart will be used
   tag: ""
 
@@ -27,3 +27,42 @@ restundTCPListenPort: 3478
 restundUDPStatusPort: 33000
 restundHTTPStatusPort: 8080
 restundMetricsListenPort: 8443
+
+federate:
+  enabled: false
+  port: 9191
+
+  dtls:
+    enabled: true
+
+    tls:
+    # Example:
+    #
+    # tls:
+    #   key: "-----BEGIN EC PRIVATE KEY----- ..." # (ascii blob) private key
+    #   crt: "-----BEGIN CERTIFICATE----- ..." # (ascii blob) certificate
+    #
+    # OR (mutually exclusive)
+    #
+    # tls:
+    #    issuerRef:
+    #      name: letsencrypt-http01
+    #
+    #      # We can reference ClusterIssuers by changing the kind here.
+    #      # The default value is Issuer (i.e. a locally namespaced Issuer)
+    #      # kind: Issuer
+    #      kind: Issuer
+    #
+    #      # This is optional since cert-manager will default to this value however
+    #      # if you are using an external issuer, change this to that issuer group.
+    #      group: cert-manager.io
+    #
+    #    # optional labels to attach to the cert-manager Certificate
+    #    certificate:
+    #      labels: ..
+    #
+    # host: # public hostname for which the certificate is created for.
+    #
+    ca: # list of trusted CA certificates (concatenated list of PEMs)
+    # example:
+    # ca: "-----BEGIN CERTIFICATE-----"
