Fix failing object when secret is not set

--- a/charts/nginx-ingress-services/templates/custom_solvers_secret.yaml
+++ b/charts/nginx-ingress-services/templates/custom_solvers_secret.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.secrets }}
+{{- if .Values.secrets.certManager }}
 {{- if .Values.secrets.certManager.customSolversSecret }}
 apiVersion: v1
 kind: Secret
@@ -10,4 +12,6 @@ metadata:
 type: Opaque
 data:
 {{ toYaml .Values.secrets.certManager.customSolversSecret | indent 2 }}
+{{- end -}}
+{{- end -}}
 {{- end -}}
