--- a/charts/elasticsearch-index/templates/migrate-data.yaml
+++ b/charts/elasticsearch-index/templates/migrate-data.yaml
@@ -41,3 +41,7 @@ spec:
             - "{{ required "missing elasticsearch-index.cassandra.port!" .Values.cassandra.port }}"
             - --cassandra-keyspace
             - "{{ required "missing elasticsearch-index.cassandra.keyspace!" .Values.cassandra.keyspace }}"
+            - --galley-host
+            - "{{ required "missing elasticsearch-index.galley.host!" .Values.galley.host }}"
+            - --galley-port
+            - "{{ required "missing elasticsearch-index.galley.port!" .Values.galley.port }}"
