--- a/charts/elasticsearch-index/values.yaml
+++ b/charts/elasticsearch-index/values.yaml
@@ -8,6 +8,9 @@ cassandra:
   # host:
   port: 9042
   keyspace: brig
+galley:
+  host: galley
+  port: 8085
 image:
   repository: quay.io/wire/brig-index
   tag: do-not-use
