Forward local MLS Welcome messages (#2175)
* MLS welcome message endpoint stub

* Add RawMLS wrapper

This makes it easier to verify signatures and to forward raw serialised
MLS objects. See haddocks for more details.

* Add assertion for raw TBS key package

* Dereference key packages in welcome messages

* Extract 'MessagePush' and employ singletons

* Remove legacy `Event` models

* Send local welcome messages

* Update to most recent crypto-cli

* Patch crypto-cli to keep using MLS ciphersuite 1

For the moment, we are going to keep ciphersuite 1 as the only supported
ciphersuite. This commit patches crypto-cli (used in integration tests)
to reflect this choice.

* Make base64url encoding for url pieces unpadded

* Integration tests for welcome message propagation

* Remove Comonad instance for RawMLS

* Use time effect in sendWelcomes

* Add a specific event constructor for MLS welcomes

* Test MLS welcome event

* Add mls welcome endpoint to nginz chart

* Add CHANGELOG entry

* Add golden tests for new event types

* Use proper temporary directory in MLS test

* Add connection ID to MLS welcome endpoint

--- a/services/galley/package.yaml
+++ b/services/galley/package.yaml
@@ -42,6 +42,7 @@ library:
   - cassandra-util >=0.16.2
   - cassava >= 0.5.2
   - cereal >=0.4
+  - comonad
   - containers >=0.5
   - cryptonite
   - currency-codes >=2.0
@@ -74,6 +75,7 @@ library:
   - resourcet >=1.1
   - retry >=0.5
   - safe-exceptions >=0.1
+  - semigroups
   - servant
   - servant-client-core
   - servant-server
@@ -168,6 +170,7 @@ executables:
     - cassandra-util
     - cassava
     - cereal
+    - comonad
     - containers
     - cookie
     - currency-codes
@@ -177,6 +180,7 @@ executables:
     - errors
     - exceptions
     - federator
+    - filepath
     - galley
     - galley-types
     - gundeck-types
@@ -193,6 +197,7 @@ executables:
     - mtl
     - optparse-applicative
     - pem
+    - process
     - protobuf
     - proto-lens
     - QuickCheck
@@ -212,6 +217,7 @@ executables:
     - tasty >=0.8
     - tasty-cannon >=0.3.2
     - tasty-hunit >=0.9
+    - temporary
     - text
     - time
     - tinylog
