--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -34,9 +34,11 @@ library
       Galley.API.LegalHold.Conflicts
       Galley.API.Mapping
       Galley.API.Message
+      Galley.API.MLS
       Galley.API.One2One
       Galley.API.Public
       Galley.API.Public.Servant
+      Galley.API.Push
       Galley.API.Query
       Galley.API.Teams
       Galley.API.Teams.Features
@@ -186,6 +188,7 @@ library
     , cassandra-util >=0.16.2
     , cassava >=0.5.2
     , cereal >=0.4
+    , comonad
     , containers >=0.5
     , cryptonite
     , currency-codes >=2.0
@@ -221,6 +224,7 @@ library
     , safe >=0.3
     , safe-exceptions >=0.1
     , saml2-web-sso >=0.18
+    , semigroups
     , servant
     , servant-client
     , servant-client-core
@@ -335,6 +339,7 @@ executable galley-integration
       API.Federation
       API.Federation.Util
       API.MessageTimer
+      API.MLS
       API.Roles
       API.SQS
       API.Teams
@@ -408,6 +413,7 @@ executable galley-integration
     , cassandra-util
     , cassava
     , cereal
+    , comonad
     , containers
     , cookie
     , currency-codes
@@ -418,6 +424,7 @@ executable galley-integration
     , extended
     , extra >=1.3
     , federator
+    , filepath
     , galley
     , galley-types
     , gundeck-types
@@ -434,6 +441,7 @@ executable galley-integration
     , mtl
     , optparse-applicative
     , pem
+    , process
     , proto-lens
     , protobuf
     , quickcheck-instances
@@ -456,6 +464,7 @@ executable galley-integration
     , tasty >=0.8
     , tasty-cannon >=0.3.2
     , tasty-hunit >=0.9
+    , temporary
     , text
     , time
     , tinylog
