Initial work on application messages and addition of several TODOs

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -196,6 +196,7 @@ library
     , cryptonite
     , currency-codes >=2.0
     , data-default >=0.5
+    , either
     , enclosed-exceptions >=1.0
     , errors >=2.0
     , exceptions >=0.4
