Introduce static error machinery

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -31,6 +31,12 @@ library
       Wire.API.Conversation.Typing
       Wire.API.Cookie
       Wire.API.CustomBackend
+      Wire.API.Error
+      Wire.API.Error.Brig
+      Wire.API.Error.Cannon
+      Wire.API.Error.Cargohold
+      Wire.API.Error.Empty
+      Wire.API.Error.Galley
       Wire.API.ErrorDescription
       Wire.API.Event.Conversation
       Wire.API.Event.FeatureConfig
@@ -58,6 +64,7 @@ library
       Wire.API.Push.Token
       Wire.API.Push.V2.Token
       Wire.API.RawJson
+      Wire.API.Routes.API
       Wire.API.Routes.AssetBody
       Wire.API.Routes.Internal.Brig
       Wire.API.Routes.Internal.Brig.Connection
@@ -208,6 +215,7 @@ library
     , mime >=0.4
     , mtl
     , pem >=0.2
+    , polysemy
     , proto-lens
     , protobuf >=0.2
     , quickcheck-instances >=0.3.16
