Execute add proposals

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -35,6 +35,7 @@ library
       Galley.API.Mapping
       Galley.API.Message
       Galley.API.MLS
+      Galley.API.MLS.KeyPackage
       Galley.API.MLS.Message
       Galley.API.MLS.Welcome
       Galley.API.One2One
