--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -84,6 +84,7 @@ library:
   - string-conversions
   - swagger >=0.1
   - swagger2
+  - tagged
   - text >=0.11
   - time >=1.4
   - unordered-containers >=0.2
