charts/coturn: pull container from quay.io
We now have a container image for our own coturn fork hosted on quay.io, so the
docker sideloading used for development is no longer required.

--- a/charts/coturn/values.yaml
+++ b/charts/coturn/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   # TODO: set to image for wireapp coturn fork.
-  repository: docker.io/coturn/coturn
+  repository: quay.io/wire/coturn
   pullPolicy: IfNotPresent
   # overwrite the tag here, otherwise `appVersion` of the chart will be used
   tag: ""
