--- a/libs/types-common/types-common.cabal
+++ b/libs/types-common/types-common.cabal
@@ -103,6 +103,7 @@ library
     , cryptonite >=0.26
     , data-default >=0.5
     , hashable >=1.2
+    , http-api-data
     , imports
     , iproute >=1.5
     , lens >=4.10
