Add a column for MLS clients to the member table

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -615,6 +615,7 @@ executable galley-schema
       V60_TeamFeatureSndFactorPasswordChallenge
       V61_MLSConversation
       V62_TeamFeatureSearchVisibilityInbound
+      V63_MLSConversationClients
       Paths_galley
   hs-source-dirs:
       schema/src
