--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -93,6 +93,7 @@ library:
   - optparse-applicative >=0.11
   - pem >=0.2
   - polysemy
+  - polysemy-plugin
   - polysemy-wire-zoo
   - proto-lens >=0.1
   - random-shuffle >=0.0.3
