--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -23,6 +23,7 @@ library
       Wire.API.Connection
       Wire.API.Conversation
       Wire.API.Conversation.Action
+      Wire.API.Conversation.Action.Tag
       Wire.API.Conversation.Bot
       Wire.API.Conversation.Code
       Wire.API.Conversation.Member
