Define the code store effect

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -94,6 +94,8 @@ library
       Brig.Run
       Brig.Sem.BrigTime
       Brig.Sem.BrigTime.IO
+      Brig.Sem.CodeStore
+      Brig.Sem.CodeStore.Cassandra
       Brig.SMTP
       Brig.Team.API
       Brig.Team.DB
