--- a/charts/galley/templates/configmap.yaml
+++ b/charts/galley/templates/configmap.yaml
@@ -19,6 +19,9 @@ data:
         host: {{ .cassandra.host }}
         port: 9042
       keyspace: galley
+      {{- if hasKey .cassandra "filterNodesByDatacentre" }}
+      filterNodesByDatacentre: {{ .cassandra.filterNodesByDatacentre }}
+      {{- end }}
 
     brig:
       host: brig
