--- a/charts/gundeck/templates/configmap.yaml
+++ b/charts/gundeck/templates/configmap.yaml
@@ -17,6 +17,9 @@ data:
         host: {{ .cassandra.host }}
         port: 9042
       keyspace: gundeck
+      {{- if hasKey .cassandra "filterNodesByDatacentre" }}
+      filterNodesByDatacentre: {{ .cassandra.filterNodesByDatacentre }}
+      {{- end }}
 
     redis:
       host: {{ .redis.host }}
