--- a/charts/spar/templates/configmap.yaml
+++ b/charts/spar/templates/configmap.yaml
@@ -20,6 +20,9 @@ data:
         host: {{ .Values.config.cassandra.host }}
         port: 9042
       keyspace: spar
+      {{- if hasKey .cassandra "filterNodesByDatacentre" }}
+      filterNodesByDatacentre: {{ .cassandra.filterNodesByDatacentre }}
+      {{- end }}
 
     maxttlAuthreq: {{ .Values.config.maxttlAuthreq }}
     maxttlAuthresp: {{ .Values.config.maxttlAuthresp }}
