Use the code store and brig time effects

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -523,6 +523,7 @@ executable brig-integration
     , network
     , optparse-applicative
     , pem
+    , polysemy
     , process
     , proto-lens
     , random >=1.0
