--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -244,6 +244,7 @@ executables:
     - network
     - optparse-applicative
     - pem
+    - polysemy
     - process
     - proto-lens
     - QuickCheck
