Generalise the Now effect in Spar
- This allows for using the Now effect with other time types than
'SAML2.WebSSO.Types.Time'.

--- a/services/spar/spar.cabal
+++ b/services/spar/spar.cabal
@@ -49,6 +49,7 @@ library
       Spar.Sem.DefaultSsoCode.Cassandra
       Spar.Sem.DefaultSsoCode.Mem
       Spar.Sem.DefaultSsoCode.Spec
+      Spar.Sem.FromUTC
       Spar.Sem.GalleyAccess
       Spar.Sem.GalleyAccess.Http
       Spar.Sem.IdPConfigStore
