--- a/charts/gundeck/values.yaml
+++ b/charts/gundeck/values.yaml
@@ -19,7 +19,7 @@ config:
   redis:
     host: redis-ephemeral-master
     port: 6379
-  bulkPush: false
+  bulkPush: true
   aws:
     region: "eu-west-1"
   proxy: {}
