--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -15,6 +15,8 @@ license:        AGPL-3
 license-file:   LICENSE
 build-type:     Custom
 extra-source-files:
+    docs/swagger-v0.json
+    docs/swagger-v1.json
     docs/swagger.md
 
 custom-setup
