--- a/services/gundeck/package.yaml
+++ b/services/gundeck/package.yaml
@@ -89,6 +89,7 @@ executables:
     - http-client
     - http-client-tls
     - HsOpenSSL
+    - kan-extensions
     - lens
     - lens-aeson
     - metrics-wai
@@ -100,6 +101,7 @@ executables:
     - random
     - retry
     - safe
+    - streaming-commons
     - tagged
     - tasty >=1.0
     - tasty-hunit >=0.9
@@ -110,6 +112,9 @@ executables:
     - unix
     - unordered-containers
     - uuid
+    - wai
+    - warp
+    - warp-tls
     - websockets >=0.8
     - yaml
   gundeck-schema:
