[Polysemy] Introduce an Effect for Password Resetting (#2288)
* Define the code store effect
* Define the PasswordResetStore effect

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -60,7 +60,6 @@ library
       Brig.Data.Instances
       Brig.Data.LoginCode
       Brig.Data.MLS.KeyPackage
-      Brig.Data.PasswordReset
       Brig.Data.Properties
       Brig.Data.Types
       Brig.Data.User
@@ -92,6 +91,10 @@ library
       Brig.Queue.Types
       Brig.RPC
       Brig.Run
+      Brig.Sem.CodeStore
+      Brig.Sem.CodeStore.Cassandra
+      Brig.Sem.PasswordResetStore
+      Brig.Sem.PasswordResetStore.CodeStore
       Brig.SMTP
       Brig.Team.API
       Brig.Team.DB
@@ -519,6 +522,7 @@ executable brig-integration
     , network
     , optparse-applicative
     , pem
+    , polysemy
     , process
     , proto-lens
     , random >=1.0
